YACC-BISSON JP/Ejemplo 6 - Calculadora con Funciones y Variables (TS gestionada por PARSER)/obj/mfcalc.output
Gramática

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: '\n'
    4     | exp '\n'
    5     | error '\n'

    6 exp: NUM
    7    | ID
    8    | ID '=' exp
    9    | ID '(' exp ')'
   10    | exp '+' exp
   11    | exp '-' exp
   12    | exp '*' exp
   13    | exp '/' exp
   14    | '-' exp
   15    | exp '^' exp
   16    | '(' exp ')'


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3 4 5
    '(' (40) 9 16
    ')' (41) 9 16
    '*' (42) 12
    '+' (43) 10
    '-' (45) 11 14
    '/' (47) 13
    '=' (61) 8
    '^' (94) 15
    error (256) 5
    NUM <dval> (258) 6
    ID <idval> (259) 7 8 9
    NEG (260)


No terminales con las reglas donde aparecen

    $accept (15)
        on left: 0
    input (16)
        on left: 1 2
        on right: 0 2
    line (17)
        on left: 3 4 5
        on right: 2
    exp <dval> (18)
        on left: 6 7 8 9 10 11 12 13 14 15 16
        on right: 4 8 9 10 11 12 13 14 15 16


Estado 0

    0 $accept: • input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


Estado 1

    0 $accept: input • $end
    2 input: input • line

    $end   desplazar e ir al estado 2
    error  desplazar e ir al estado 3
    NUM    desplazar e ir al estado 4
    ID     desplazar e ir al estado 5
    '-'    desplazar e ir al estado 6
    '\n'   desplazar e ir al estado 7
    '('    desplazar e ir al estado 8

    line  ir al estado 9
    exp   ir al estado 10


Estado 2

    0 $accept: input $end •

    $default  aceptar


Estado 3

    5 line: error • '\n'

    '\n'  desplazar e ir al estado 11


Estado 4

    6 exp: NUM •

    $default  reduce usando la regla 6 (exp)


Estado 5

    7 exp: ID •
    8    | ID • '=' exp
    9    | ID • '(' exp ')'

    '='  desplazar e ir al estado 12
    '('  desplazar e ir al estado 13

    $default  reduce usando la regla 7 (exp)


Estado 6

   14 exp: '-' • exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 14


Estado 7

    3 line: '\n' •

    $default  reduce usando la regla 3 (line)


Estado 8

   16 exp: '(' • exp ')'

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 15


Estado 9

    2 input: input line •

    $default  reduce usando la regla 2 (input)


Estado 10

    4 line: exp • '\n'
   10 exp: exp • '+' exp
   11    | exp • '-' exp
   12    | exp • '*' exp
   13    | exp • '/' exp
   15    | exp • '^' exp

    '-'   desplazar e ir al estado 16
    '+'   desplazar e ir al estado 17
    '*'   desplazar e ir al estado 18
    '/'   desplazar e ir al estado 19
    '^'   desplazar e ir al estado 20
    '\n'  desplazar e ir al estado 21


Estado 11

    5 line: error '\n' •

    $default  reduce usando la regla 5 (line)


Estado 12

    8 exp: ID '=' • exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 22


Estado 13

    9 exp: ID '(' • exp ')'

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 23


Estado 14

   10 exp: exp • '+' exp
   11    | exp • '-' exp
   12    | exp • '*' exp
   13    | exp • '/' exp
   14    | '-' exp •
   15    | exp • '^' exp

    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 14 (exp)


Estado 15

   10 exp: exp • '+' exp
   11    | exp • '-' exp
   12    | exp • '*' exp
   13    | exp • '/' exp
   15    | exp • '^' exp
   16    | '(' exp • ')'

    '-'  desplazar e ir al estado 16
    '+'  desplazar e ir al estado 17
    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20
    ')'  desplazar e ir al estado 24


Estado 16

   11 exp: exp '-' • exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 25


Estado 17

   10 exp: exp '+' • exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 26


Estado 18

   12 exp: exp '*' • exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 27


Estado 19

   13 exp: exp '/' • exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 28


Estado 20

   15 exp: exp '^' • exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 29


Estado 21

    4 line: exp '\n' •

    $default  reduce usando la regla 4 (line)


Estado 22

    8 exp: ID '=' exp •
   10    | exp • '+' exp
   11    | exp • '-' exp
   12    | exp • '*' exp
   13    | exp • '/' exp
   15    | exp • '^' exp

    '-'  desplazar e ir al estado 16
    '+'  desplazar e ir al estado 17
    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 8 (exp)


Estado 23

    9 exp: ID '(' exp • ')'
   10    | exp • '+' exp
   11    | exp • '-' exp
   12    | exp • '*' exp
   13    | exp • '/' exp
   15    | exp • '^' exp

    '-'  desplazar e ir al estado 16
    '+'  desplazar e ir al estado 17
    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20
    ')'  desplazar e ir al estado 30


Estado 24

   16 exp: '(' exp ')' •

    $default  reduce usando la regla 16 (exp)


Estado 25

   10 exp: exp • '+' exp
   11    | exp • '-' exp
   11    | exp '-' exp •
   12    | exp • '*' exp
   13    | exp • '/' exp
   15    | exp • '^' exp

    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 11 (exp)


Estado 26

   10 exp: exp • '+' exp
   10    | exp '+' exp •
   11    | exp • '-' exp
   12    | exp • '*' exp
   13    | exp • '/' exp
   15    | exp • '^' exp

    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 10 (exp)


Estado 27

   10 exp: exp • '+' exp
   11    | exp • '-' exp
   12    | exp • '*' exp
   12    | exp '*' exp •
   13    | exp • '/' exp
   15    | exp • '^' exp

    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 12 (exp)


Estado 28

   10 exp: exp • '+' exp
   11    | exp • '-' exp
   12    | exp • '*' exp
   13    | exp • '/' exp
   13    | exp '/' exp •
   15    | exp • '^' exp

    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 13 (exp)


Estado 29

   10 exp: exp • '+' exp
   11    | exp • '-' exp
   12    | exp • '*' exp
   13    | exp • '/' exp
   15    | exp • '^' exp
   15    | exp '^' exp •

    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 15 (exp)


Estado 30

    9 exp: ID '(' exp ')' •

    $default  reduce usando la regla 9 (exp)
